style: fix to scroll only overlay for better text readability accross screen sizes

--- a/frontend/src/components/NavBar.module.css
+++ b/frontend/src/components/NavBar.module.css
@@ -61,7 +61,7 @@
       0 0 1.4rem #FF1493;
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     .navInner {
       flex-direction: column;
       align-items: center;
